src/objects/Reference__c.object
<CustomObject>
    <description>Created by Oscar @ Impact Box, 14/08/2020</description>
    <fields>
        <fullName>AllegationRelatingtochildren__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Have there been any allegations, disciplinary or competency issues against this candidate relating to the safety and welfare of children or young adults?</inlineHelpText>
        <label>Allegations Regarding Childrens Welfare?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CapabilityDetails__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Please elaborate on why you have answered &apos;No&apos;: This role will involve working with children, some of whom may exhibit challenging behaviour. Do you believe that this candidate is capable of patience, empathy and can display a positive attitude?</inlineHelpText>
        <label>Capability Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChildrensWelfareDetails__c</fullName>
        <inlineHelpText>Have there been any allegations, disciplinary or competency issues against this candidate relating to the safety and welfare of children or young adults?, Please Elaborate:</inlineHelpText>
        <label>Childrens Welfare Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <formula>Tutor__r.FirstName  &amp; &quot; &quot; &amp;  Tutor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>This role will involve working with children, some of whom may exhibit challenging behaviour. Do you believe that this candidate is capable of patience, empathy and can display a positive attitude?</inlineHelpText>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Howlonghaveyouknowntheapplicant__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>How long have you known the applicant?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndependentSelfSufficientDetail__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Tutors will often be required to work independently and be self-sufficient. Do you believe
the applicant is capable of being independent and self-sufficient? Please elaborate:</inlineHelpText>
        <label>Independent/Self-Sufficient Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Independent__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Tutors will often be required to work independently and be self-sufficient. Do you believe
the applicant is capable of being independent and self-sufficient?</inlineHelpText>
        <label>Independent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patience__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>This role will involve working with children, some of whom may exhibit challenging behaviour. Do you believe that this candidate is capable of patience, empathy and can display a positive attitude?</inlineHelpText>
        <label>Patience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PositiveAttitude__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>This role will involve working with children, some of whom may exhibit challenging behaviour. Do you believe that this candidate is capable of patience, empathy and can display a positive attitude?</inlineHelpText>
        <label>Positive Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Punctual__c</fullName>
        <description>Tutors will often be assigned to work with a child for a prolonged period of time. As a
result, reliability and punctuality are essential to ensure consistency. Do you believe that the applicant is reliable and punctual?</description>
        <inlineHelpText>Created by Oscar @ Impact Box, 14/08/2020</inlineHelpText>
        <label>Punctual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecommendForRole__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Would you recommend this applicant for this role?</inlineHelpText>
        <label>Recommend For Role?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RefereeEmail__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Referee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RefereeName__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Referee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceReminderSent__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Reference Reminder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReferenceRequestSent__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Reference Request Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReferencingFormLink__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4845313?tfa_2=&quot; &amp;  

ContactName__c &amp; 
&quot;&amp;tfa_3=&quot; &amp;  Tutor__r.Id &amp;
&quot;&amp;tfa_2789=&quot; &amp;  TEXT(Type__c) &amp;
&quot;&amp;tfa_2798=&quot; &amp;  Id &amp; 
&quot;&amp;tfa_2794=&quot; &amp;  RefereeName__c,
&quot;Referencing Request Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referencing Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReliablePunctualDetail__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Tutors will often be assigned to work with a child for a prolonged period of time. As a
result, reliability and punctuality are essential to ensure consistency. Do you believe that the applicant is reliable and punctual? Please elaborate:</inlineHelpText>
        <label>Reliable/Punctual Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reliable__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Tutors will often be assigned to work with a child for a prolonged period of time. As a
result, reliability and punctuality are essential to ensure consistency. Do you believe that the applicant is reliable and punctual?</inlineHelpText>
        <label>Reliable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SelfSufficient__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Tutors will often be required to work independently and be self-sufficient. Do you believe
the applicant is capable of being independent and self-sufficient?</inlineHelpText>
        <label>Self-Sufficient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                    <default>true</default>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Tutor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhyWhyNotRecommend__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Why/Why Not Recommend?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Reference</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>